# aprs-weather-submit

./: .gitignore  AUTHORS  CHANGELOG.md  CODE_OF_CONDUCT.md  ChangeLog  INSTALL  INSTALL.md  Makefile  Makefile.am  NEWS  NEWS.md  README  README.md  SECURITY.md  aprs-is.c  aprs-is.h  aprs-weather-submit.1.man  aprs-wx.c  aprs-wx.h  autogen.sh  configure.ac  getopt-windows.h  main.c  main.h  make-dos.bat  make.bat  release-signing-key.asc
.github/: FUNDING.yml
.github/workflows/: release.yml
contrib/: README.md  convert-to-C89.patch
contrib/freegetopt-0.11/: dosstyle.patch  getopt.c
debian/: README.source  aprs-weather-submit-docs.docs  aprs-weather-submit.manpages  autoreconf.after  autoreconf.before  build.sh  changelog  control  copyright  debhelper-build-stamp  docs  files  rules  watch
debian/source/: options
gentoo/: README.md  aprs-weather-submit-1.5.2.ebuild  aprs-weather-submit-1.5.ebuild  aprs-weather-submit-1.6.ebuild  aprs-weather-submit-1.8.ebuild  aprs-weather-submit-2.1.ebuild  metadata-1.5.1.xml  metadata.xml
man/: INSTALL.md  Makefile.am  README.md  aprs-weather-submit.1.man  aprs-weather-submit.man
src/: aprs-is.c  aprs-is.h  aprs-wx.c  aprs-wx.h  c99math.c  c99math.h  getopt-windows.h  help.c  help.h  main.c  main.h
